--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "name": "wedding",
   "private": true,
+  "homepage": "https://vladboyarinov1.github.io/wedding/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "pnpm run deploy"
+  },
+  "config": {
+    "gh-pages": {
+      "branch": "gh-pages",
+      "dir": "dist",
+      "repo": "https://github.com/vladboyarinov1/wedding.git",
+      "dotfiles": true
+    }
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
