--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2",
     "react-timer-hook": "^3.0.7",
     "styled-components": "^6.1.8",
     "yup": "^1.3.3"
